--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,10 +1,30 @@
+html,body{
+      height: 100%;
+}
+
 body {
-  background-color: #fbc547;
-  color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
-    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
-    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
-    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
-  padding: 18vh 1rem;
+  display: grid;
+  grid-gap: 10px;
+  margin: 0;
+  height: 100%;
+  grid-template-columns:1fr;
+  grid-template-areas:
+                 "header"
+                 "content"
+                 "footer";
+  grid-template-rows: 100px 1fr 80px;
   text-align: center;
+}
+
+header {
+  grid-area: header;
+}
+
+footer {
+  grid-area: footer;
+}
+
+header,
+footer{
+  background-color: lightgrey;
 }
