fix of the layout

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,7 +13,9 @@
   <body>
     <body>
       <header>The header</header>
-      <%= yield %>
+      <main>
+        <%= yield %>
+      </main>
       <footer>The footer</footer>
     </body>
   </body>
