--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -10,7 +10,7 @@ body {
   grid-template-columns:1fr;
   grid-template-areas:
                  "header"
-                 "content"
+                 "main"
                  "footer";
   grid-template-rows: 100px 1fr 80px;
   text-align: center;
