--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,9 +16,11 @@
     <header>
       <img src="images/logo.png" class="logo">
       <a class="homepage" href="/index.html"> Scuole parrocchiali Desio</a>
+    </header>
+    <div class="menu">
       <a class="le_scuole"href="/le_scuole.html">Le scuole</a>
       <a class="esploratori"href="/esploratori.html">Esploratori</a>
-    </header>
+    </div>
     <main>
       <%= yield %>
     </main>
