--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -6,33 +6,46 @@ body {
   display: grid;
   grid-gap: 10px;
   margin: 0;
-  height: 100%;
-  grid-template-columns:1fr;
+  height: 10px;
+  grid-template-columns: 1fr;
   grid-template-areas:
-                 "header"
-                 "main"
-                 "footer";
-  grid-template-rows: 100px 1fr 100px;
-  text-align: center;
+            "header"
+            "menu"
+            "breadcrumb"
+            "main"
+            "footer";
+  grid-template-rows: 100px 10px 30px 1fr 100px;
 }
 
 header {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
   grid-area: header;
-}
-
-footer {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-row: 1fr;
-  grid-area: footer;
-  background-color: #505151;
+  grid-template-columns: auto auto;
+  align-items: center;
+  justify-content: center;
+  margin-left: 0;
+  right: 0;
 }
 
-main {
-  margin: 15px;
+.homepage {
+  font-size: 25px;
+  font-family: 'Noto Serif', serif;
+  margin-top: 5px;
+}
+
+.logo {
+  display: grid;
+  max-width: 70px;
+  height: auto;
+  padding: 1rem;
+}
+
+.menu {
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-gap: 2rem;
+  text-align: center;
+  justify-content: center;
 }
 
 a:link {
@@ -50,26 +63,87 @@ a:hover {
   text-decoration: underline;
 }
 
-.homepage {
-  font-size: 25px;
-  font-family: 'Noto Serif', serif;
-  margin-top: 1em;
-}
-
-.logo {
+.breadcrumb ul {
+  list-style: none;
+  text-align: left;
   display: grid;
-  width: 50px;
-  height: auto;
-  padding: 2em;
+  grid-template-rows: 25px;
+  grid-template-columns: repeat(8, 70px);
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgrey;
+  align-items: center;
 }
 
-.esploratori {
+.breadcrumb li {
+  display: inline-block;
+  font-size: 15px;
+}
+
+.breadcrumb li+li:before {
+  color: black;
+  content: ">\00a0";
+}
+
+.breadcrumb li a {
+  text-decoration: none;
+  color: black;
+}
+
+.breadcrumb li a:visited{
+  text-decoration: none;
+  color: black;
+}
+
+.breadcrumb li a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+
+main {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem;
+}
+
+.title {
+  font-family: 'Noto Serif', serif;
+  font-size: 15px;
+  text-align: center;
+}
+
+.text {
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 11px;
+}
+
+footer {
+  display: grid;
+  grid-template-columns: 200px  200px;
+  grid-row: 1fr;
+  grid-area: footer;
+  background-color: #505151;
+  position:fixed;
+  bottom:0px;
+  left:0px;
+  right:0px;
+  margin-bottom:0px;
+  justify-content: center;
+}
+
+
+.footer--link__one:visited,
+.footer--link__two:visited {
+  color: #FFFFFF
 }
 
 .footer--information{
   text-align: center;
-  margin: 15px;
+  left: 50px;
   font-size: 10px;
+  margin-top: 1rem;
   color: #FFFFFF
 }
 
@@ -85,16 +159,4 @@ a:hover {
 .footer--link__one,
 .footer--link__two {
   margin-top: 15px;
-}
-
-.title {
-  font-family: 'Noto Serif', serif;
-  font-size: 15px;
-  padding-top: 2em;
-}
-
-.text {
-  font-family: 'Noto Sans', sans-serif;
-  font-size: 11px;
-  text-align: center;
 }
