--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,6 +21,11 @@
       <a class="le_scuole"href="/le_scuole.html">Le scuole</a>
       <a class="esploratori"href="/esploratori.html">Esploratori</a>
     </div>
+    <div class="breadcrumb">
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+      </ul>
+    </div>
     <main>
       <%= yield %>
     </main>
