--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,7 +26,7 @@
         <li><a href="/index.html">Home</a></li>
       </ul>
     </div>
-    <main>
+    <main class="main">
       <%= yield %>
     </main>
     <footer>
