--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -5,12 +5,13 @@
 html,body {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   display: grid;
   grid-gap: 10px;
-  margin: 0;
   height: 10px;
   grid-template-columns: 1fr;
   grid-template-areas:
@@ -19,7 +20,9 @@ body {
             "breadcrumb"
             "main"
             "footer";
-  grid-template-rows: 100px auto auto 1fr 100px;
+  grid-template-rows: auto auto 30px 1fr auto;
+  min-height: 100%;
+  justify-items: center;
 }
 
 header {
@@ -108,8 +111,7 @@ a:hover {
 
 .main {
   display: grid;
-  margin-left: auto;
-  margin-right: auto;
+
 }
 
 .title {
@@ -129,7 +131,7 @@ footer {
   grid-area: footer;
   background-color: #505151;
   justify-content: center;
-
+  width: 100%;
 }
 
 
