--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,6 +26,7 @@
         <li><a href="/index.html">Home</a></li>
       </ul>
     </div>
+    <div class="dash"></div>
     <main class="main">
       <%= yield %>
     </main>
