--- a/source/le_scuole.html.erb
+++ b/source/le_scuole.html.erb
@@ -1,1 +1,10 @@
-<h1 class="title">Le scuole</h1>
+<section>
+  <h1 class="title">Le scuole</h1>
+  <div class="gallery">
+    <h1 class="title">Gallery</h1>
+    <%= image_tag 'photo.png', class: 'photo1' %>
+    <%= image_tag 'photo.png', class: 'photo2' %>
+    <%= image_tag 'photo.png', class: 'photo3' %>
+    <%= image_tag 'photo.png', class: 'photo4' %>
+  </div>
+</section>
