--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,11 +16,18 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br /> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br /> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br /> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
 
-  <!-- <div class="gallery">
-    <h1 class="title">Gallery</h1>
-    <%= image_tag 'photo.png', class: 'photo1' %>
-    <%= image_tag 'photo.png', class: 'photo2' %>
-    <%= image_tag 'photo.png', class: 'photo3' %>
-    <%= image_tag 'photo.png', class: 'photo4' %>
-  </div> -->
+  <div class="useful_link">
+    <div class="usefull-link usefull-link--item-one">
+      <%= image_tag 'document-icon.png', class: 'document-icon' %>
+      <a class="scuola-in-chiaro" href="/scuole_in_chiaro.html">
+        Scuola in chiaro
+      </a>
+    </div>
+    <div class="usefull-link usefull-link--item-two">
+      <%= image_tag 'document-icon.png', class: 'document-icon' %>
+      <a class="calendario" href="link-direct-download">
+        Calendario giorni festivi
+      </a>
+    </div>
+  </div>
 </section>
