Implements a map for the homepage
- Uses MapBox
- Import a custom style/markers
- Fits into a fixed bounding box
- Disable zoom on scroll

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <!-- Use the title from a page's frontmatter if it has one -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
     <title>
     </title>
   </head>
