Improves documents list
- Makes naming consistent with BEM syntax
- Dries up the CSS
- Refactors media queries breakpoints

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,14 +16,14 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br /> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br /> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br /> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
 
-  <div class="useful_link">
-    <div class="usefull-link usefull-link--item-one">
+  <div class="documents-list">
+    <div class="documents-list__item">
       <%= image_tag 'document-icon.png', class: 'document-icon' %>
       <a class="scuola-in-chiaro" href="/scuole_in_chiaro.html">
         Scuola in chiaro
       </a>
     </div>
-    <div class="usefull-link usefull-link--item-two">
+    <div class="documents-list__item">
       <%= image_tag 'document-icon.png', class: 'document-icon' %>
       <a class="calendario" href="link-direct-download">
         Calendario giorni festivi
