--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,4 +1,7 @@
+// Variables
 $content-width: 40rem;
+$breakpoint-xs: 440px;
+$breakpoint-sm: 600px;
 
 * {
   box-sizing: border-box;
@@ -45,7 +48,7 @@ header {
   text-transform: uppercase;
 }
 
-@media (min-width: 440px) {
+@media (min-width: $breakpoint-xs) {
   .header-brand {
     width: 100%;
     flex-direction: row;
@@ -56,7 +59,7 @@ header {
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: $breakpoint-sm) {
   header {
     align-items: center;
   }
@@ -155,25 +158,29 @@ a:hover {
   font-family: 'Noto Sans', sans-serif;
   font-size: 13px;
 }
-.useful_link a:visited,
-.useful_link a:link{
+.documents-list a:visited,
+.documents-list a:link{
   color:#282A2E;
 }
-.usefull-link--item-one {
+.documents-list {
   display: flex;
-  align-items: center;
-  padding: 10px;
-  padding-top: 2rem;
+  flex-direction: column;
 }
-.usefull-link--item-two {
-  display: flex;
-  align-items: center;
+.documents-list__item {
   padding: 1rem;
-  float: right;
-  flex-direction: row-reverse;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
+
+@media (min-width: $breakpoint-sm) {
+  .documents-list__item:nth-child(2n) {
+    flex-direction: row-reverse;
+  }
+}
+
 .document-icon {
-  width:50px;
+  width: 50px;
   height: auto;
 }
 
@@ -201,7 +208,7 @@ footer {
 }
 
 
-@media (min-width: 600px) {
+@media (min-width: $breakpoint-sm) {
   footer {
     grid-template-columns: minmax(0, 1fr) minmax(0, $content-width) minmax(0, 1fr);
   }
