link color fixes

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -105,8 +105,8 @@ a:link {
   color: #282A2E;
 }
 
-.header-link--laboratories a,
-.header-link--schools a {
+.header-link--laboratories:link,
+.header-link--schools:link {
   color: #282A2E;
 }
 
