--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -2,7 +2,7 @@
 $content-width: 40rem;
 $breakpoint-xs: 440px;
 $breakpoint-sm: 600px;
-$font-color: #282A2E
+$font-color: #282A2E;
 
 * {
   box-sizing: border-box;
