le scuole s page

--- a/source/le_scuole.html.erb
+++ b/source/le_scuole.html.erb
@@ -1,10 +1,24 @@
-<section>
-  <h1 class="title">Le scuole</h1>
-  <div class="gallery">
-    <h1 class="title">Gallery</h1>
-    <%= image_tag 'photo.png', class: 'photo1' %>
-    <%= image_tag 'photo.png', class: 'photo2' %>
-    <%= image_tag 'photo.png', class: 'photo3' %>
-    <%= image_tag 'photo.png', class: 'photo4' %>
-  </div>
+<section class="school-index">
+  <a href="/san_giuseppe.html" class=" school-link">
+    <h1>
+      Scuola dell'infanzia "San Giuseppe"
+    </h1>
+  </a>
+  <%= image_tag 'example1.jpg', class: 'example1' %>
+</section>
+<section class="school-index">
+  <a href="/san_giorgio.html" class=" school-link">
+    <h1>
+       Scuola dell'infanzia "San Giorgio"
+    </h1>
+  </a>
+  <%= image_tag 'example2.jpg', class: 'example2' %>
+</section>
+<section class="school-index">
+  <a href="/san_vincenzo.html" class=" school-link">
+    <h1>
+      Scuola dell'infanzia paritaria "San Vincenzo"
+    </h1>
+  </a>
+  <%= image_tag 'example3.jpg', class: 'example3' %>
 </section>
