--- a/source/le_scuole.html.erb
+++ b/source/le_scuole.html.erb
@@ -1,24 +1,20 @@
-<section class="school-index">
-  <a href="/san_giuseppe.html" class=" school-link">
-    <h1>
-      Scuola dell'infanzia "San Giuseppe"
-    </h1>
-  </a>
-  <%= image_tag 'example1.jpg', class: 'example1' %>
+<section class="card">
+      <%= link_to 'Scuola dell&#39infanzia San Giuseppe', '/scuole/san_giuseppe.html', class: 'school-link' %>
+  <figure>
+    <%= image_tag 'example1.jpg', class: 'example'%>
+  </figure>
 </section>
-<section class="school-index">
-  <a href="/san_giorgio.html" class=" school-link">
-    <h1>
-       Scuola dell'infanzia "San Giorgio"
-    </h1>
-  </a>
-  <%= image_tag 'example2.jpg', class: 'example2' %>
+
+<section class="card">
+      <%= link_to 'Scuola dell&#39infanzia San Giorgio', '/scuole/san_giorgio.html', class: 'school-link' %>
+  <figure>
+    <%= image_tag 'example2.jpg', class: 'example'%>
+  </figure>
 </section>
-<section class="school-index">
-  <a href="/san_vincenzo.html" class=" school-link">
-    <h1>
-      Scuola dell'infanzia paritaria "San Vincenzo"
-    </h1>
-  </a>
-  <%= image_tag 'example3.jpg', class: 'example3' %>
+
+<section class="card">
+      <%= link_to 'Scuola dell&#39infanzia paritaria San Vincenzo', '/scuole/san_vincenzo.html', class: 'school-link' %>
+  <figure>
+    <%= image_tag 'example3.jpg', class: 'example'%>
+  </figure>
 </section>
