--- a/source/le_scuole.html.erb
+++ b/source/le_scuole.html.erb
@@ -1,3 +1,7 @@
+<ul class="breadcrumbs">
+  <li><a href="/index.html">Home</a></li>
+  <li><a href="/le_scuole.html">Le scuole</a></li>
+</ul>
 <section class="card">
       <%= link_to 'Scuola dell&#39infanzia San Giuseppe', '/scuole/san_giuseppe.html', class: 'school-link' %>
   <figure>
