--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,8 @@
 <section>
+  <ul class="breadcrumbs">
+    <li><a href="/index.html">Home</a></li>
+  </ul>
+  
   <h1 class="title">
     Chi siamo?
   </h1>
